--- a/department-service.properties
+++ b/department-service.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 management.endpoints.web.exposure.include=*
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
